Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-12-27 (SVN):
    * vid_cgx.c, gl_vidamiga.c, in_amiga.c: new native Amiga code from
      Szilard Biro

2012-12-27 (SVN):
    * snd_ahi.c: Update from Szilard Biro with cleanups and portability
      improvements to make it compile on AmigaOS 3.x too.
    * updated version date stamp to 2012-12-27.

2012-12-10 (SVN):
    * gl_draw.c (GL_ResampleTexture): allocate p1 and p2 temporarily on
      the hunk instead of having them as array[1024]. if gl_max_size is
      greater than 1024, the old code would just sefault with outwidth
      values greater than 1024.
    * updated version date stamp to 2012-12-10.

2012-12-07 (SVN):
    * mathlib.h: added original version of the VectorNegate() macro in
      commented out form.
    * bspfile.c: fixed an old stupid error in the version error message.

2012-11-23 (SVN):
    * mathlib.h (VectorClear): remove extraneous semicolon from the end.

2012-11-23 (SVN):
    * utils/common/bspfile.c (SwapBSPFile): although the end result in
      memory needn't change, swap the texinfo in a way consistent with
      the layout of the vecs in the texinfo_t struct. found in a recent
      commit in quakeforge git repo.

2012-11-22 (SVN):
    * utils, qbsp: added command line option "-oldhullsize" to replicate
      the old h2utils/qbsp behavior of using the original hexen2 sizes
      for hulls #5 and #6, not H2MP ones, if so needed. also removed the
      unix fork() and windows CreateProcess() code for now.

2012-11-20 (SVN):
    * [gl_]model.h: synced h2 and hw versions and moved under h2shared.
      added info about the hw EF_BRIGHTFIELD and EF_ONFIRE brokenness.
    * server/model.h: synced h2 and hw versions, renamed to sv_model.h
      and moved under h2shared.
    * server/model.c: renamed to sv_model.c.
    * updated version date stamp to 2012-11-20.
    * gamecode/hc, constant.hc: added info about the EF_BRIGHTFIELD and